crates/types/tests/snapshots/builder_test__assert_serde-2.snap
---
source: crates/types/tests/builder_test.rs
expression: "&input"
---
{
  "ty": {
    "type": "Object",
    "value": {
      "key_type": {
        "ty": {
          "type": "Integer",
          "value": {
            "kind": "U128"
          }
        }
      },
      "value_type": {
        "name": "Named",
        "ty": {
          "type": "Struct",
          "value": {
            "fields": {
              "field": {
                "schema": {
                  "ty": {
                    "type": "Boolean",
                    "value": {}
                  }
                },
                "hidden": false,
                "nullable": false,
                "optional": false,
                "read_only": false,
                "write_only": false
              }
            },
            "partial": false
          }
        }
      }
    }
  }
}
