crates/types/tests/snapshots/builder_test__assert_serde.snap
---
source: crates/types/tests/builder_test.rs
expression: "&input"
---
{
  "ty": {
    "type": "String",
    "value": {
      "max_length": 1,
      "min_length": 1
    }
  }
}
