crates/types/tests/snapshots/builder_test__map_shaped_scalars-2.snap
---
source: crates/types/tests/builder_test.rs
expression: "& input"
---
{
  "ty": {
    "type": "Struct",
    "fields": {
      "start": {
        "schema": {
          "ty": {
            "type": "Integer",
            "kind": "Usize"
          }
        }
      },
      "end": {
        "schema": {
          "ty": {
            "type": "Integer",
            "kind": "Usize"
          }
        }
      }
    },
    "partial": false
  }
}
