crates/types/tests/snapshots/builder_test__map_shaped_scalars.snap
---
source: crates/types/tests/builder_test.rs
expression: "& input"
---
{
  "ty": {
    "type": "Struct",
    "fields": {
      "secs": {
        "schema": {
          "ty": {
            "type": "Integer",
            "kind": "U64"
          }
        }
      },
      "nanos": {
        "schema": {
          "ty": {
            "type": "Integer",
            "kind": "U32"
          }
        }
      }
    },
    "partial": false
  }
}
